train|val|test split

--- a/labs/Lab2/Code_lab2.ipynb
+++ b/labs/Lab2/Code_lab2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,11 @@
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "from random import sample\n",
-    "import os"
+    "import os\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import shutil"
    ]
   },
   {
@@ -100,6 +104,68 @@
     "# Create folders\n",
     "for path in paths:\n",
     "    Path(path).mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) Nu ska du göra train|val|test split med följande splits:\n",
+    "- train - 1600 (800 dogs, 800 cats)\n",
+    "- val - 400 (200 dogs, 200 cats)\n",
+    "- test - 500 (250 dogs, 250 cats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files have been copied successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_dir = 'original_data/train'  \n",
+    "target_dir = 'experiment_small_data' \n",
+    "\n",
+    "def copy_files(files, target_subdir):\n",
+    "    for file in files:\n",
+    "        # Copy files from 'source_dir' to 'target_dir'\n",
+    "        shutil.copy(file, os.path.join(target_dir, target_subdir, os.path.basename(file)))\n",
+    "\n",
+    "# Read files and shuffle\n",
+    "dog_files = [os.path.join(source_dir, file) for file in os.listdir(source_dir) if file.startswith('dog')]\n",
+    "cat_files = [os.path.join(source_dir, file) for file in os.listdir(source_dir) if file.startswith('cat')]\n",
+    "np.random.shuffle(dog_files)\n",
+    "np.random.shuffle(cat_files)\n",
+    "\n",
+    "train_dogs, val_dogs, test_dogs = 800, 200, 250\n",
+    "train_cats, val_cats, test_cats = 800, 200, 250\n",
+    "\n",
+    "# Sampling without replacement for dogs \n",
+    "dogs_train = dog_files[:train_dogs]\n",
+    "dogs_val = dog_files[train_dogs:train_dogs+val_dogs]\n",
+    "dogs_test = dog_files[train_dogs+val_dogs:train_dogs+val_dogs+test_dogs]\n",
+    "\n",
+    "copy_files(dogs_train, 'train')\n",
+    "copy_files(dogs_val, 'val')\n",
+    "copy_files(dogs_test, 'test')\n",
+    "\n",
+    "# Sampling without replacement for cats\n",
+    "cats_train = cat_files[:train_cats]\n",
+    "cats_val = cat_files[train_cats:train_cats+val_cats]\n",
+    "cats_test = cat_files[train_cats+val_cats:train_cats+val_cats+test_cats]\n",
+    "\n",
+    "copy_files(cats_train, 'train')\n",
+    "copy_files(cats_val, 'val')\n",
+    "copy_files(cats_test, 'test')\n",
+    "\n",
+    "print('Files have been copied successfully')"
    ]
   },
   {
