Selection of image sizes

--- a/labs/Lab2/Code_lab2.ipynb
+++ b/labs/Lab2/Code_lab2.ipynb
@@ -56396,11 +56396,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " b) Välj en lämplig bildstorlek att ändra samtliga bilder till. Gör en analys och fundera på om du behöver\n",
+    "slänga bilder. Hur kommer du fram till ditt val?\n",
+    "<br>\n",
+    "<br>\n",
+    "Enligt plotten över bildernas storlek så verkar de vanligaste bredd och höjddimensionerna ligga i det övre området i grafen. Eftersom att jag vill minimera beskärning och skalnings samtidigt behålla så mycket information som möjligt så väljer en storlek nära medianen. Jag väljer bildstorleken 256x256 för att minska antalet mycket stora eller mycket små bilder vilket är bra då detta kan påverka träningens prestanda och effektivitet. "
+   ]
   }
  ],
  "metadata": {
