--- a/labs/Lab2/Code_lab2.ipynb
+++ b/labs/Lab2/Code_lab2.ipynb
@@ -6498,6 +6498,67 @@
    "source": [
     "X_train.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create list with indices \n",
+    "indices_to_keep = [i for i, size in enumerate(train_sizes) if size in filtered_train_sizes]\n",
+    "\n",
+    "# Keep images from indices_to _keep\n",
+    "X_train = np.array([X_train[i] for i in indices_to_keep])\n",
+    "y_train = np.array([y_train[i] for i in indices_to_keep])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1587, 180, 180, 3)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1587,)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
