Changes to exercise 1b

--- a/labs/Lab2/Code_lab2.ipynb
+++ b/labs/Lab2/Code_lab2.ipynb
@@ -6393,10 +6393,8 @@
     "<br>\n",
     "<br>\n",
     "\n",
-    "Jag valde att slänga bilder med en bredd mindre än 80 och en höjd mindre 100 för att sortera ut de allra minsta bilderna. Att förstora allt för små bilder kan leda till förlust av detaljer och pixering vilket kan resultera i en mindre skarp bild. \n",
-    "\n",
-    "\n",
-    "Enligt plotten över bildernas storlek så verkar de vanligaste bredd och höjddimensionerna ligga i det övre området i grafen. Eftersom att jag vill minimera beskärning och skalnings samtidigt behålla så mycket information som möjligt så väljer en storlek nära medianen. Jag väljer bildstorleken 256x256 för att minska antalet mycket stora eller mycket små bilder vilket är bra då detta kan påverka träningens prestanda och effektivitet. "
+    "Jag valde stoleken 180x180 samt att slänga bilder med en bredd mindre än 80 och en höjd mindre än 100 för att sortera ut de allra minsta bilderna. Att förstora allt för små bilder kan leda till förlust av detaljer och pixering vilket kan resultera i en mindre skarp bild. \n",
+    "Jag vill därför minimera beskärning och skalnings och samtidigt behålla så mycket information som möjligt. Jag vill också att minska antalet mycket stora bilder då det är minneskrävande samt kan påverka träningens prestanda och effektivitet.  "
    ]
   },
   {
@@ -6551,6 +6549,15 @@
    ],
    "source": [
     "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Träna modeller (*)\n",
+    "a) Använd följande nätverk och träna på datan. Gör hyperparametertuning för några parametrar (beskriv\n",
+    "hur du gör). Visualisera och analysera loss-kurvor, accuracy-kurvor."
    ]
   },
   {
